# opt

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: compile_warnings.cmake  global_flags.cmake  project_flags.cmake
src/: .clang-format
src/include/: opt.h  opt_bits.h
src/tests/: CMakeLists.txt  tests.cpp
